--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </button>
     <button onclick="addData()">Console New Data with 4th Student</button>
     <button onclick="removeFailedStudent()">Remove Failed Student</button>
-    <button onclick="concatenateArray()">concatenate Array</button>
+    <button onclick="concatenateArray()">Concatenate Array</button>
 
     <script src="./script.js"></script>
   </body>
